welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: type mismatch;
 found   : String("true")
 required: Boolean
	if (vacation == true){"true"}
                              ^sleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if (vacation == true){"true"}
        ^